open issues button dark mode styles

--- a/src/components/Room.module.css
+++ b/src/components/Room.module.css
@@ -36,7 +36,8 @@
   top: 0;
   margin: 1rem;
   padding: 10px;
-  border: 2px solid var(--primary-dark);
+  border: 2px solid var(--text-dark);
+  color: var(--text-dark);
   box-sizing: border-box;
   border-radius: 5px;
   cursor: pointer;
